--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .p{
     background-color: red;
 }
-.div{
-    background-image: url("images/1.jpg");
-}
+/*.div{*/
+    /*background-image: url("images/1.jpg");*/
+/*}*/
